updated for current info

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 <title>
-  Blair Mason
+  Lamont Computer Lessons
 </title>
 </head>
 <body>
-<a href='iwg'>IWG</a>
+<a href='iwg'><b><big>CST 18</big></b></a>
 </body>
 </html>
 
