updated some stuff to say CST

--- a/cst/index.html
+++ b/cst/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>USNA Information Warfare Group</title>
+    <title>USNA CST</title>
   </head>
   <body>
-    <h1>IWG</h1>
+    <h1><big>CST</big></h1>
     <p>Low level exploitation lessons/resources can be found
     <a href='exploit'>here</a></p>
     <p>This site is currently under construction</p>
