--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </title>
 </head>
 <body>
-<a href='iwg'><b><big>CST 18</big></b></a>
+<a href='cst'><b><big>CST 18</big></b></a>
 </body>
 </html>
 
